<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:layout_marginBottom="@dimen/layout_margin_bottom"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tetris"
            android:textSize="80sp"/>

        <TextView
            android:id="@+id/tv_higth_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/layout_margin_top"/>


        <TextView
            android:id="@+id/tv_curret_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_score"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"/>

        <Button
            android:id="@+id/restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"/>
        </LinearLayout>




    </LinearLayout
        >
</androidx.constraintlayout.widget.ConstraintLayout>